--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 #@SNP_HEALTH_bot
 BOT_TOKEN=5756924881:AAHp6TfPbrwwXEFRFHTB7Qnw2SBdD2GuB6k
 ADMIN_IDS=843554518,1463744684,463672403
-GROUP=-0
-CHANNEL=@
+GROUP=-1002028794836
+CHANNEL=@ne_lekarstvo
+#CHANNEL_ID=-1001678824344
