--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 #@SNP_HEALTH_bot
-BOT_TOKEN=5756924881:AAE6Wb2sLZ3DhL--_VD4ny8DWkaVBQ7lQSU
-ADMIN_IDS=843554518,1463744684,463672403
-GROUP=-1002028794836
-CHANNEL=@ne_lekarstvo
-#CHANNEL_ID=-1001678824344
+BOT_TOKEN=
+ADMIN_IDS=
+GROUP=-
+CHANNEL=
+#CHANNEL_ID=-
